# MT5-Docker

./: .coverage  .coveragerc  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine-backup  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  docker-build.yml  security.yml  test.yml
Metatrader/MQL5/: .gitignore
assets/: install-mt5.sh  start.sh  supervisord.conf  x11vnc-session.sh  xorg.conf
assets/slim/: slim.conf
data/response_samples/: account.json  balance.json  calendar_all.json  config_m1.json  history_bars.json  history_ticks.json  instruments.json  live_stream_m1.json  live_stream_tick.json  orders.json  positions.json  symbol_info_all.json  symbol_info_multiple.json  symbol_info_response.json  trade_buy.json  trade_confirmation.json
docs/: ACCOUNT_GUIDE.md  DESERIALIZATION_ERROR_FIX.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  ECON_CALENDAR_GUIDE.md  HIST_DATA_GUIDE.md  LIVE_DATA_GUIDE.md  RESPONSE_FORMATS.md  SYMBOL_INFO_PROPOSAL.md  TRADE_GUIDE.md
docs/monitoring/: ARCHITECTURE.md  QUICKSTART.md  README.md
docs/openapi/: README.md  index.html  mt5-api-spec.yaml
docs/tutorials/: 01_GITHUB_ACTIONS_GUIDE.md  README.md  (+2 more)
monitoring/: README.md  logging_config.py  prometheus_exporter.py
scripts/: capture_responses.py  check_live_stream.py  check_tick_stream.py  download_history.py  health-check.sh  healthcheck.py  mt5-watchdog.sh  start-mt5.sh  symbol_info_response.json  test_jsonapi.py  test_symbol_info.py  validate_openapi.py  zmq_client.py
tests/: __init__.py  conftest.py
(+20 files in other folders)
